[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonebot-plugin-subflow"
version = "0.0.1"
description = "字幕组任务管理 Bot — NoneBot2 插件，对接腾讯文档智能表"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "nonebot2>=2.3",
    "nonebot-adapter-onebot>=2.4",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["nonebot_plugin_subflow*"]
exclude = ["tests*", "spike*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: hits the real Tencent Doc API; requires spike/.env.spike with valid creds",
]
testpaths = ["tests"]
